fixing left spacing of radio buttons on forms

--- a/neurovault/apps/main/static/css/style.css
+++ b/neurovault/apps/main/static/css/style.css
@@ -207,3 +207,7 @@ ul.collection_nav li {
     overflow-y:auto;
     overflow-x: hidden;
 }
+
+.radio {
+    padding-left:20px;
+}
